Final Alignment fix. with good View

--- a/Qeemah/WebContent/common/css/style.css
+++ b/Qeemah/WebContent/common/css/style.css
@@ -236,8 +236,9 @@
 .RegisterButtonWidth{
 	width : 11rem;
 }
-.IconTabBarHeadingBGCOlor{
+.IconTabBarStyling{
 	background-color: #4ABDB9;
+	width:70rem;
 }
 .sapMITBSelected{
 	background-color: #1573A6;
